syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/mistandok/auth/pkg/user_v1;user_v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "User API v1"
    version: "1.0.0"
    contact: {
      name: "Anton Artikov"
      email: "arti-anton@yandex.ru"
    };
  };

  host: "localhost:8061",
  schemes: HTTP,
  schemes: HTTPS,
  consumes: "application/json",
  produces: "application/json",
};

service UserV1 {
  // Создает нового пользователя
  rpc Create(CreateRequest) returns (CreateResponse){
    option (google.api.http) = {
      post: "/user/v1"
      body: "*"
    };
  }

  // Получает пользователя по ID
  rpc Get(GetRequest) returns (GetResponse){
    option (google.api.http) = {
      get: "/user/v1"
    };
  }

  // Обновляет пользователя
  rpc Update(UpdateRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      patch: "/user/v1"
      body: "*"
    };
  }

  // Удаляет пользователя по ID
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      delete: "/user/v1"
    };
  }
}

message CreateRequest {
  // Наименование пользователя
  string name = 1 [(validate.rules).string = {min_len: 1, max_len: 200}];
  // email пользователя
  string email = 2 [(validate.rules).string.email = true];
  // Пароль пользователя
  string password = 3 [(validate.rules).string = {min_len: 1, max_len: 200}];
  // Подтверждение пароля пользователя
  string password_confirm = 4 [(validate.rules).string = {min_len: 1, max_len: 200}];
  // Роль пользователя
  Role role = 5;
}

enum Role {
  UNKNOWN = 0;
  USER = 1;
  ADMIN = 2;
}

message CreateResponse {
  // Идентификатор пользователя
  int64 id = 1;
}

message GetRequest {
  // Идентификатор пользователя
  int64 id = 1 [(validate.rules).int64.gt = 0];
}

message GetResponse {
  // Идентификатор пользователя
  int64 id = 1;
  // Наименование пользователя
  string name = 2;
  // email пользователя
  string email = 3;
  // Роль пользователя
  Role role = 4;
  // Время создания пользователя
  google.protobuf.Timestamp created_at = 5;
  // Время обновления пользователя
  google.protobuf.Timestamp updated_at = 6;
}

message UpdateRequest {
  // Идентификатор пользователя
  int64 id = 1 [(validate.rules).int64.gt = 0];
  // Наименование пользователя
  optional string name = 2 [(validate.rules).string = {min_len: 1, max_len: 200}];
  // email пользователя
  optional string email = 3 [(validate.rules).string.email = true];
  // Роль пользователя
  optional Role role = 4;
}

message DeleteRequest {
  // Идентификатор пользователя
  int64 id = 1 [(validate.rules).int64.gt = 0];
}
